--- a/CHANGES
+++ b/CHANGES
@@ -4,12 +4,13 @@ Features:
  - Ability to mute individual audio channels
  - Palette viewer
  - Volume control
- - More shortcuts are editable (e.g. quick save/load, solar sensor)
+ - More shortcuts are editable (e.g. quick save/load)
  - Rewind now shows the frame after rewinding
  - Import/Export of GameShark/Action Replay snapshots
  - Add "Step backwards" item for single increment rewind
  - Deadzone estimation for game controllers
  - Analog inputs can be used for shortcuts
+ - Menu items for specific solar sensor brightness levels
 Bugfixes:
  - GBA: Fix timers not updating timing when writing to only the reload register
  - All: Fix sanitize-deb script not cleaning up after itself
