--- a/CHANGES
+++ b/CHANGES
@@ -38,6 +38,7 @@ Bugfixes:
 Misc:
  - Qt: Show multiplayer numbers in window title
  - Qt: Handle saving input settings better
+ - Debugger: Free watchpoints in addition to breakpoints
 
 0.2.0: (2015-04-03)
 Features:
