--- a/CHANGES
+++ b/CHANGES
@@ -38,6 +38,7 @@ Bugfixes:
  - Util: Fix resource leak in UTF-8 handling code
  - VFS: Fix resource leaks if some allocations fail
  - Debugger: Fix boundary conditions in tab completion
+ - Video: Fix an issue with very long filenames
 Misc:
  - Qt: Show multiplayer numbers in window title
  - Qt: Handle saving input settings better
