--- a/CHANGES
+++ b/CHANGES
@@ -69,6 +69,7 @@ Bugfixes:
  - Qt: Fix analog buttons not getting unmapped
  - GBA Video: Prevent tiles < 512 from being used in modes 3 - 5
  - Qt: Fix passing command line options
+ - Qt: Fix crashes on Windows by using using QMetaObject to do cross-thread calls
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
