--- a/CHANGES
+++ b/CHANGES
@@ -73,6 +73,7 @@ Bugfixes:
  - GBA Video: Fix timing on first scanline
  - GBA: Ensure cycles never go negative
  - Util: Fix formatting of floats
+ - Debugger: Fix use-after-free in breakpoint clearing code
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
