--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
-0.4.1: (Future)
+0.3.1: (Future)
 Bugfixes:
  - Qt: Windows no longer spawn in the top left on first launch
+ - Qt: Fix install path of XDG desktop file with DESTDIR
 
 0.3.0: (2015-08-16)
 Features:
