--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Bugfixes:
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
+ - GBA Memory: Use a dynamically sized mask for ROM memory
 
 0.3.0: (2015-08-16)
 Features:
