--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ Misc:
  - GBA Memory: Use a dynamically sized mask for ROM memory
  - Qt: Remove useless help icons in dialogs
  - ARM7: Combine shifter-immediate and shifter-register functions to reduce binary size
+ - SDL: Support fullscreen in SDL 1.2
 
 0.3.0: (2015-08-16)
 Features:
