--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Bugfixes:
  - Qt: Fix drag and drop on Windows
  - Qt: Reenable double buffering, as disabling it broke some Windows configs
  - GBA Video: Start on the scanline BIOS finishes on if no BIOS is loaded
+ - GBA: Deinit savegame when unloading a ROM
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
