--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ Misc:
  - Qt: Remove useless help icons in dialogs
  - ARM7: Combine shifter-immediate and shifter-register functions to reduce binary size
  - SDL: Support fullscreen in SDL 1.2
+ - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
 
 0.3.0: (2015-08-16)
 Features:
